--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Monovision Studio</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/modern-normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?version=0.1">
 </head>
 
 <body>
